3 postwar eco focuses

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5619,6 +5619,12 @@ ROM_increase_gold_and_silver_exports:0 "Export Gold and Silver"
 ROM_expansion_of_the_lumber_industry:0 "Expand the Logging Industry"
 ROM_trade_deals_with_germany_and_austria:0 "Trade Deal With the Central Powers"
 ROM_close_the_trade_defict:0 "Close the Trade Deficit"
+ww1_romania.72.t:0 "First Romanian Flight"
+ww1_romania.72.desc:0 "Aurel Vlaicu, Romanian inventor, engineer, airplane designer and pilot, flew for the first time A. Vlaicu Nr. I today, marking an important breakthrough in Romanian aviation."
+ww1_romania.72.a:0 "This will be helpful for the military."
+ROM_spike_interest_rates:0 "Spike Interest Rates"
+ROM_price_controls:0 "Price Controls"
+ROM_strengthen_the_leu:0 "Stabilize the Leu"
 
 
 
@@ -5661,26 +5667,19 @@ ROM_war_has_ended:0 "§WThis focus will be §W§Gautocompleted§G§W when the §
 ROM_tsarmy:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!"
 ROM_pwarmy:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!\n£organization_texticon Division Organization: §G+5.00%§!"
 ROM_reorg_army.tt:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Organization: §G+10.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!\n\n"
-
 ROM_prah_f.tt:0 "Modify §YRomanian Economy§! by\n£factory_output_texticon Max Factories in a State: §G+2.50%§!"
 ROM_cte.tt:0 "Modify §YRomanian Economy§! by\n£construction_speed_texticon Construction Speed: §G+5.00%§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y+10.0%§!"
 ROM_mafa:0 "Modify §YRomanian Economy§! by\n£construction_speed_texticon Construction Speed: §G+5.00%§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y+5.0%§!"
-
 ROM_mil_speed_1:0 "Modify §YRomanian Economy§! by\n§YMilitary Factory§! construction speed: §G+10.00%§!"
 ROM_mil_speed_2:0 "Modify §YRomanian Economy§! by\n§YMilitary Factory§! construction speed: §G+15.00%§!\nStability: §R-10.00%§!"
-
-
 ROM_ift.tt:0 "Modify §YRomanian Economy§! by\n£factory_output_texticon Factory Output: §G+5.00%§!\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05§W"
 ROM_ice.tt:0 "Modify §YRomanian Economy§! by\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-5.0%§!"
 ROM_edd.tt:0 "Modify §YRomanian Economy§! by\n£dockyard_output_texticon Dockyard Output: §G+5.00%§!"
-
 ROM_agricultural_knowledge.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-7.0%§!"
 ROM_tdga:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.10§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-10.0%§!"
 ROM_si.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.10§!\n£construction_speed_texticon Construction Speed: §G+5.00%§!"
 ROM_gati:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y+5.0%§!"
-
 ROM_cttd:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §G-0.05§!\n£consumer_goods_texticon Consumer Goods Factories factor\: §Y-5.0%§!"
-
 ww1_romania.41.t:0 "Germany Demands Concessions For Continued Arms Exports"
 ww1_romania.41.d:0 "With the majority of our weapon purchases coming from Germany, the Kaiser has decided to use this leverage to demand a series of concessions on us. They are saying that if we don't increase trade and even allow them to use some of our railways to transport supplies to Bulgaria, they will cut off arms exports. While it would be a violation of our neutrality, we may not really be in a position to say no."
 ww1_romania.41.a:0 "These terms aren't that bad"
@@ -5691,7 +5690,6 @@ ROM_acds:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Orga
 ROM_ads:0 "Modify §YRomanian Army§! by\n£attacker_speed_texticon Divisions Speed: §G+10.00%§!"
 ROM_fight_for_increased_exports:0 "Increase Interest in Romanian Cereals"
 member_of_pc:0 "Member of §cPC§!"
-
 member_of_pnl:0 "Member of §lPNL§!"
 member_of_psdr:0 "Member of §rPSDR§!"
 member_of_pnd:0  "Member of §qPND§!"
@@ -5701,10 +5699,16 @@ ROM_german_support_withdraw.tt:0 "If we go to war with §YGermany§! the effects
 ROM_french_support_withdraw.tt:0 "If we go to war with §YFrance§! the effects from this §Yfocus§! will be §RRemoved§!."
 ROM_british_support_withdraw.tt:0 "If we go to war with §YBritain§! the effects from this §Yfocus§! will be §RRemoved§!."
 ROM_austrian_support_withdraw.tt:0 "If we go to war with §YAustria§! the effects from this §Yfocus§! will be §RRemoved§!."
-
 ROM_french_industry_support_withdrawn.tt:0 "We will §Rlose§! the civilian factory from the focus "§YFrench Industrial Support§!""
 ROM_french_weapons_withdrawn.tt:0 "We will §Rlose§! the military factory from the focus "§YIncrease French Weapon Purchases§!""
 ROM_german_weapons_withdrawn.tt:0 "We will §Rlose§! the military factory from the focus "§YKrupp Weapon Purchases§!""
+
+
+ROM_postwar.tt:0 "Modify §YRomanian Economy §Y§Wby:\n£factory_output_texticon Factory Output:§W§G +15.00% §G\n£consumer_goods_texticon §WConsumer Goods factor§W: §Y+40.0%§Y\n£political_power_cost_texticon §WDaily Political Power Cost§W: §R-0.05§R  \n£arms_factory_production_speed_texticon §WMilitary Factory Construction Speed§W: §G+15.00%§G§W"
+ROM_spike_interest.tt:0 "Modify §YRomanian Economy §Y§Wby:\n£consumer_goods_texticon Consumer Goods factor: §Y-10.0%§Y§W\n£construction_speed_texticon Construction Speed:§W§R -5.00%§R§W\n£political_power_cost_texticon Daily Political Power Gain:§W§G +0.10§G§W"
+ROM_price_controls.tt:0 "Modify §YRomanian Economy §Y§Wby:\n£consumer_goods_texticon Consumer Goods factor: §Y-10.0%§Y§W\n£political_power_cost_texticon Daily Political Power Gain:§W§R -0.15§R§W"
+ROM_strengthen_leu.tt:0 "Modify §YRomanian Economy §Y§Wby:\n£consumer_goods_texticon Consumer Goods factor: §Y-5.0%§Y§W\n£factory_output_texticon Factory Output:§W §R-5.00%§R§W \n£stability_texticon Gain Base Stability:§W§G +2.50%§G§W"
+
 
 
  TUR_promote_turkish_culture_in_aegean:0 "Promote Turkish Culture in Aegean"
