--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2878,15 +2878,7 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  ROM_the_natural_enemy_idea:0 "The Natural Enemy"
  ROM_social_welfare_idea:0 "State-Funded Social Welfare"
 ROM_local_autonomy_in_new_territories_idea:0 "Temporary Local Autonomy in New Territories"
-ROM_postwar_economy1:0 "Postwar Economy"
-ROM_postwar_economy2:0 "Postwar Economy"
-ROM_postwar_economy3:0 "Postwar Economy"
-ROM_postwar_economy4:0 "Postwar Economy"
-ROM_postwar_economy5:0 "Postwar Economy"
-ROM_postwar_economy6:0 "Postwar Economy"
-ROM_postwar_economy7:0 "Postwar Economy"
-ROM_electrification_idea:0 "Electrifying Romania"
-ROM_electrification_idea2:0 "Romania Electrified"
+ROM_postwar_economy:0 "Postwar Economy"
 
  #PERU
  PRU_aristocratic_republic:0 "Aristocratic Republic"
