--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5142,7 +5142,7 @@ ww1_romania.55.d:0 "Today several Romanian protesters took to the street in Russ
 ww1_romania.55.a:0 "This is an outrage! Condemn them"
 ww1_romania.55.b:0 "Lets act rationally here..."
 you_are_now_happy:0 "You are now §GHappy§!"
-ROM_advancements_in_plane_technology:0 "Innovations in Aircraft"
+ROM_advancements_in_plane_technology:0 "Commission Military Aircraft"
 ROM_sec:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!"
 ROM_the_southern_wall:0 "The Southern Wall"
 ROM_stragetic_fortifications_on_the_southern_border:0 "Fortify Key Cities on the Bulgarian Border"
@@ -5619,14 +5619,21 @@ ROM_increase_gold_and_silver_exports:0 "Export Gold and Silver"
 ROM_expansion_of_the_lumber_industry:0 "Expand the Logging Industry"
 ROM_trade_deals_with_germany_and_austria:0 "Trade Deal With the Central Powers"
 ROM_close_the_trade_defict:0 "Close the Trade Deficit"
-ww1_romania.72.t:0 "First Romanian Flight"
-ww1_romania.72.desc:0 "Aurel Vlaicu, Romanian inventor, engineer, airplane designer and pilot, flew for the first time A. Vlaicu Nr. I today, marking an important breakthrough in Romanian aviation."
-ww1_romania.72.a:0 "This will be helpful for the military."
+ww1_romania.72.t:0 "Successful Aircraft Design Returned"
+ww1_romania.72.desc:0 "Aurel Vlaicu, Romanian inventor, engineer, airplane designer and pilot, flew for the first time A. Vlaicu Nr. I today near Bucharest. This is a huge development for Romanian planes to be used in the military."
+ww1_romania.72.a:0 "This will be helpful."
+ww1_romania.73.t:0 "Commission Engineer to Build Aircraft"
+ww1_romania.73.desc:0 "The question is who to commission to build us a functioning aircraft to be used for military purposes?"
+ww1_romania.73.a:0 "Let's go with Aurel Vlaicu."
+ww1_romania.73.b:0 "Traian Vuia is the right choice."
 ROM_spike_interest_rates:0 "Spike Interest Rates"
 ROM_price_controls:0 "Price Controls"
 ROM_strengthen_the_leu:0 "Stabilize the Leu"
-
-
+ROM_aircraft_historical.tt:0 "§RThis is the historical option.§R§W"
+ROM_back_in_couple_of_days.tt:0 "§YThis engineer will be back with his design in a couple of days.§Y§W"
+ROM_different_buffs_aircraft.tt:0 "§WDepending on who you choose, you will get different buffs related to Air Technology.§W§W"
+ROM_commission_air_name1:0 "§YCommissioned Aurel Vlaicu §Y§W"
+ROM_commission_air_name2:0 "§YCommissioned Traian Vuia §Y§W"
 
 
 #custom tooltips
