content for now

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1805,6 +1805,12 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  CHI_join_great_war_desc:0 "The Entente are urging us to declare war against [GER.GetNameDef] and join the Great War. If we win this war, we can revoke German rights on us and reclaim the concessions they took away. Of course, the Entente powers will also impose an advantage on us. But the real benefit we get from joining in the war is that we get a good excuse to crush the rebellious warlords and cliques of the South."
  CHI_form_yiyongjun:0 "Recruit Volunteer Troops"
  CHI_form_canzhanjun:0 "Form the War Participation Army"
+ political_power_more_than_7:0 "§Y7.00§!"
+ political_power_more_than_7_blocked:0 "§R7.00§!"
+ political_power_more_than_7_tooltip:0 "It costs £GFX_pol_power §Y7§! to take the decision"
+ political_power_more_than_15:0 "§Y15.00§!"
+ political_power_more_than_15_blocked:0 "§R15.00§!"
+ political_power_more_than_15_tooltip:0 "It costs £GFX_pol_power §Y15§! to take the decision"
  command_power_more_than_25:0 "£command_power §Y25§!"
  command_power_more_than_25_blocked:0 "£command_power §R25§!"
  command_power_more_than_25_tooltip:0 "It costs £command_power §Y25§! to take the decision"
@@ -5599,6 +5605,10 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_nationalize_greek_businesses:0 "Nationalize Greek Businesses in [FROM.GetName]"
  TUR_nationalize_greek_businesses_desc:0 "Greeks and other Christians have held a monopoly over oue economy. By transferring their businesses to Muslim Turks, we can achieve a loyal and national bourgeoisie."
  TUR_nationalize_greek_businesses_tt:0 "Modify £ww1_game_rule_flag_GRE §YGreek Minority§! by\n£civ_factory  Local Factories: §G+5%§!\n£construction_speed_texticon  Local Construction Speed: §R-2%§!\n"
+ TUR_nationalize_greek_businesses_354:0 "Nationalize Greek Businesses in [FROM.GetName]"
+ TUR_nationalize_greek_businesses_354_desc:0 "Greeks and other Christians have held a monopoly over oue economy. By transferring their businesses to Muslim Turks, we can achieve a loyal and national bourgeoisie."
+ TUR_nationalize_greek_businesses_355:0 "Nationalize Greek Businesses in [FROM.GetName]"
+ TUR_nationalize_greek_businesses_355_desc:0 "Greeks and other Christians have held a monopoly over oue economy. By transferring their businesses to Muslim Turks, we can achieve a loyal and national bourgeoisie."
  TUR_increase_konstantiniyye_centralization_1:0 "Modify §YCentralization§! of §YKonstantiniyye Vilayet§! by §G+1%§!\n"
  TUR_increase_catalca_centralization_1:0 "Modify §YCentralization§! of §YÇatalca Vilayet§! by §G+1%§!\n"
  TUR_increase_izmit_centralization_1:0 "Modify §YCentralization§! of §Yİzmit Vilayet§! by §G+1%§!\n"
@@ -5618,6 +5628,10 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_increase_trabzon_centralization_1:0 "Modify §YCentralization§! of §YTrabzon Vilayet§! by §G+1%§!\n"
  TUR_deport_greeks:0 "Deport Greeks in [FROM.GetName]"
  TUR_deport_greeks_desc:0 "There are several towns and villages that accompany a large Greek population in [FROM.GetName]. By deporting them and giving their properties to Muslims, we can create an ethnically homogenious society."
+ TUR_deport_greeks_354:0 "Deport Greeks in [FROM.GetName]"
+ TUR_deport_greeks_354:0 "There are several towns and villages that accompany a large Greek population in [FROM.GetName]. By deporting them and giving their properties to Muslims, we can create an ethnically homogenious society."
+ TUR_deport_greeks_355:0 "Deport Greeks in [FROM.GetName]"
+ TUR_deport_greeks_355:0 "There are several towns and villages that accompany a large Greek population in [FROM.GetName]. By deporting them and giving their properties to Muslims, we can create an ethnically homogenious society."
  TUR_increased_pressure_on_bulgarians:0 "Increase Pressure on Bulgarians in [FROM.GetName]"
  TUR_increased_pressure_on_bulgarians_desc:0 "As their nation state has recently gained their independence, many Bulgarians within our empire fervor with uniting with their main country. As this results in a need for more garrisons in the region, we'll combat and increase pressure on such thoughts and sentiments."
  TUR_increased_pressure_on_bulgarians_tt:0 "Modify £ww1_game_rule_flag_YUG §YSouth Slavic Minority§! by\n£political_violence_loss_texticon  Resistance Decay Speed: §G+10%§!\n£garrison_texticon  Required Garrisons: §R+5%§!\n\n"
