--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4979,7 +4979,7 @@
  TUR_increase_kermanshah_centralization_10:0 "Modify §YCentralization§! of §YKermanshah Vilayet§! by §G+10%§!\n"
  TUR_confiscate_christian_properties:0 "Confiscate Christian Properties"
  TUR_confiscate_christian_properties_desc:0 "Clearing our empire from its unwelcomed Christian elements is a long and costly process, which is undesirable without the popular support from anyone. In order to win the hearts and loyalties of our Muslim population into supporting such atrocious policies, we'll distribute the properties of previously displaced or exterminated Christians."
- TUR_confiscate_christian_properties_tt:0 "§YMinority focuses§! and §Ydecisions§! will be reduced in §Ytime§! and §Ycost§!, and get additional §Ystability§! and §Ywar support§! upon completion."
+ TUR_confiscate_christian_properties_tt:0 "§YMinority focuses§! and §Ydecisions§! will provide additional §Ystability§! and §Ywar support§! upon completion."
  TUR_central_governance_in_arabia:0 "Central Governance in Arabia"
  TUR_central_governance_in_arabia_desc:0 "Though our empire has been the de jure controller of the Arabian peninsula, it has managed little to no control over the region. As our state envisiones a centralized state structure, we'll start the gradual move towards establishing the presence of our central government in the region."
  TUR_increase_aleppo_centralization_5:0 "Modify §YCentralization§! of §YAleppo Vilayet§! by §G+5%§!\n"
