--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1104,6 +1104,13 @@
  HJZ_armistice_in_the_revolt_instant_desc:0 "§RWill be removed if we're no longer at war with [TUR.GetName]§!"
  TUR_mustafa_rahmi_committee:0 "Mustafa Rahmi Bey"
  TUR_mustafa_rahmi_committee_desc:0 "\n\n\n\n\n\n£GFX_TUR_mustafa_rahmi_texticon \n\n\n\n\n\n\n\nMustafa Rahmi Bey, the governor of Aydın Vilayet, is a prominent member of the Committee of Union and Progress. His connections to the committee has allowed himself to gain a wide range of autonomy in his actions, even though some of his policies do not allign with the state."
+ TUR_mustafa_rahmi_committee_tt:0 "£decision_icon_small  §YDecisions§! related to §Yminorities§! are §Runavailable§!\n"
+ TUR_cemal_azmi_committee:0 "Cemal Azmi Bey"
+ TUR_cemal_azmi_committee_desc:0 "\n\n\n\n\n\n£GFX_TUR_cemal_azmi_texticon \n\n\n\n\n\n\n\nMustafa Rahmi Bey, the governor of Trabzon Vilayet, is a prominent member of the Committee of Union and Progress. His connections to the committee has allowed himself to gain a wide range of autonomy in his actions, even though some of his policies do not allign with the state."
+ TUR_cemal_azmi_committee_tt:0 "£decision_icon_small  §YDecisions§! related to §Yminorities§! are §Ghalf the cost§!\n"
+ TUR_mehmed_resid_committee:0 "Mehmed Reşit Bey"
+ TUR_mehmed_resid_committee_desc:0 "\n\n\n\n\n\n£GFX_TUR_mehmed_resid_texticon \n\n\n\n\n\n\n\nMustafa Rahmi Bey, the governor of Diyarbakır Vilayet, is a prominent member of the Committee of Union and Progress. His connections to the committee has allowed himself to gain a wide range of autonomy in his actions, even though some of his policies do not allign with the state."
+ TUR_mehmed_resid_committee_tt:0 "£decision_icon_small  §YDecisions§! related to §Yminorities§! are §Gtwice as fast§!\n"
 
  AUH_austrian_integration:0 "Austrian Integration"
  AUH_condominium_of_bosnia_and_herzegovina:0 "Condominium of Bosnia and Herzegovina"
