Revert "Touches Leaf"
This reverts commit 0ee2cfb105be91cb1f4edced2ef13c08dcd8c3f2.

--- a/localisation/english/ww1_bulgaria_l_english.yml
+++ b/localisation/english/ww1_bulgaria_l_english.yml
@@ -1,4 +1,4 @@
-l_english:
+﻿l_english:
  
 #bulgaria_random_shi
  liberal_stabilizer:0 "Liberal Stabilizer"
@@ -231,12 +231,12 @@ l_english:
  ###Bulgaria-Ottoman/Turkey Negotiations###
 
  ww1_BUL_TUR.1.t: "Continuing Negotiations with Bulgaria?"
- ww1_BUL_TUR.1.d: "Currently, the tensions between Bulgaria and the Ottoman Empire are at an all-time high and are getting more problematic for the Ottoman Empire, as a result, The Ottoman Ambassador Mustafa Asim Bey was sent to our country to negotiate a joint compromise between both countries. Should we allow him in?"  
+ ww1_BUL_TUR.1.d: "Currently, the tensions between Bulgaria and the Ottoman Empire are at an all-time high and are getting more problematic for the Ottoman Empire, as a result, The Ottoman Ambassador Mustafa Asım Bey was sent to our country to negotiate a joint compromise between both countries. Should we allow him in?"  
  ww1_BUL_TUR.1.a: "Yes"
  ww1_BUL_TUR.1.b: "No"
  
- ww1_BUL_TUR.2.t: "Concerns Shared by Mustafa Asim Bey: Conscription of Ottoman Citizens in Bulgarian Borders"
- ww1_BUL_TUR.2.d: "Mustafa Asim Bey shares that Ottoman Citizens are being used for military interest against their own Country by the Bulgarian Tsardom. Mustafa Asim Bey Suggests that Bulgaria should quit doing such actions to ensure stability for its citizens living in Bulgaria."
+ ww1_BUL_TUR.2.t: "Concerns Shared by Mustafa Asım Bey: Conscription of Ottoman Citizens in Bulgarian Borders"
+ ww1_BUL_TUR.2.d: "Mustafa Asım Bey shares that Ottoman Citizens are being used for military interest against their own Country by the Bulgarian Tsardom. Mustafa Asım Bey Suggests that Bulgaria should quit doing such actions to ensure stability for its citizens living in Bulgaria."
  ww1_BUL_TUR.2.a: "He has a good point"
  ww1_BUL_TUR.2.b: "Nope"
  
@@ -249,7 +249,7 @@ l_english:
  ww1_BUL_TUR.4.a: "Their loss"
  
  ww1_BUL_TUR.5.t: "What to Discuss with Geshov"
- ww1_BUL_TUR.5.d: "Mustafa Asim Bey seeks to continue this discussion further. He asks what other topics would you like to address?"
+ ww1_BUL_TUR.5.d: "Mustafa Asım Bey seeks to continue this discussion further. He asks what other topics would you like to address?"
  ww1_BUL_TUR.5.a: "Conscription of Ottoman Citizens in Bulgaria"
  ww1_BUL_TUR.5.b: "Concerns about Upcoming Mufti Elections"
  ww1_BUL_TUR.5.c: "Cease Negotiations"
@@ -264,18 +264,18 @@ l_english:
  ww1_BUL_TUR.7.d: "The Ottoman delegation is concerned that if Hocazade Mehmet Muhiddin Efendi is re-elected as the Bulgarian Mufti by the end of the decade Muslims would lose all their rights in Bulgaria."
  ww1_BUL_TUR.7.a: "Express concerns about Mehmet Muhiddin Efendi"
 
- ww1_BUL_TUR.8.t: "What Attitude Should Mustafa Asim Bey Have?"
- ww1_BUL_TUR.8.d: "The Ottoman delegation must decide whether Mustafa Asim Bey should have as an attitude."
+ ww1_BUL_TUR.8.t: "What Attitude Should Mustafa Asım Bey Have?"
+ ww1_BUL_TUR.8.d: "The Ottoman delegation must decide whether Mustafa Asım Bey should have as an attitude."
  ww1_BUL_TUR.8.a: "Sympathetic"
  ww1_BUL_TUR.8.b: "Neutral"
  ww1_BUL_TUR.8.c: "Strict"
 
- ww1_BUL_TUR.9.t: "Mustafa Asim Bey Has a Sympathetic Attitude"
- ww1_BUL_TUR.9.d: "Mustafa Asim Bey is displaying a sympathetic attitude during the negotiations, signaling a suspicious willingness to compromise. Mustafa Asim Bey even went as far as to blame the multitude of problems on the Young Turk's government,"
+ ww1_BUL_TUR.9.t: "Mustafa Asım Bey Has a Sympathetic Attitude"
+ ww1_BUL_TUR.9.d: "Mustafa Asım Bey is displaying a sympathetic attitude during the negotiations, signaling a suspicious willingness to compromise. Mustafa Asım Bey even went as far as to blame the multitude of problems on the Young Turk's government,"
  ww1_BUL_TUR.9.a: "Interesting"
 
  ww1_BUL_TUR.10.t: "Border Conflicts"
- ww1_BUL_TUR.10.d: "Mustafa Asim Bey has brought up the border conflicts between Bulgaria and the Ottoman Empire. How should he approach this matter?"
+ ww1_BUL_TUR.10.d: "Mustafa Asım Bey has brought up the border conflicts between Bulgaria and the Ottoman Empire. How should he approach this matter?"
  ww1_BUL_TUR.10.a: "Antagonize Bulgaria"
  ww1_BUL_TUR.10.b: "Act Neutrally"
 
@@ -292,25 +292,25 @@ l_english:
  ww1_BUL_TUR.13.d: "The negotiations between Bulgaria and the Ottoman Empire have completely failed. This will undoubtedly escalate tensions."
  ww1_BUL_TUR.13.a: "Their loss"
 
- ww1_BUL_TUR.14.t: "Concerns Shared by Mustafa Asim Bey: Upcoming Mufti Elections"
- ww1_BUL_TUR.14.d: "Mustafa Asim Bey raises concerns about the upcoming Mufti elections in Bulgaria, emphasizing the importance of selecting a candidate that will satisfy Ottoman interests."
+ ww1_BUL_TUR.14.t: "Concerns Shared by Mustafa Asım Bey: Upcoming Mufti Elections"
+ ww1_BUL_TUR.14.d: "Mustafa Asım Bey raises concerns about the upcoming Mufti elections in Bulgaria, emphasizing the importance of selecting a candidate that will satisfy Ottoman interests."
  ww1_BUL_TUR.14.a: "We will keep this in mind"
 
- ww1_BUL_TUR.15.t: "Mustafa Asim Bey Would Like to Move On"
- ww1_BUL_TUR.15.d: "After the most recent disagreement, Mustafa Asim Bey suggests moving on to other matters regarding different issues."
+ ww1_BUL_TUR.15.t: "Mustafa Asım Bey Would Like to Move On"
+ ww1_BUL_TUR.15.d: "After the most recent disagreement, Mustafa Asım Bey suggests moving on to other matters regarding different issues."
  ww1_BUL_TUR.15.a: "Sure"
  ww1_BUL_TUR.15.b: "Nope, cease negotiations"
 
- ww1_BUL_TUR.16.t: "Mustafa Asim Bey is Neutral"
- ww1_BUL_TUR.16.d: "Mustafa Asim Bey has adopted a neutral attitude towards the Geopolitical situation of Bulgaria, and the Ottoman Empire."
+ ww1_BUL_TUR.16.t: "Mustafa Asım Bey is Neutral"
+ ww1_BUL_TUR.16.d: "Mustafa Asım Bey has adopted a neutral attitude towards the Geopolitical situation of Bulgaria, and the Ottoman Empire."
  ww1_BUL_TUR.16.a: "Well"
 
- ww1_BUL_TUR.17.t: "Mustafa Asim Bey is Strict"
- ww1_BUL_TUR.17.d: "Mustafa Asim Bey has taken a strict stance, making the negotiations more difficult overall for Bulgaria to get Bulgarian-favored outcomes."
+ ww1_BUL_TUR.17.t: "Mustafa Asım Bey is Strict"
+ ww1_BUL_TUR.17.d: "Mustafa Asım Bey has taken a strict stance, making the negotiations more difficult overall for Bulgaria to get Bulgarian-favored outcomes."
  ww1_BUL_TUR.17.a: "This is hindering negotiations"
 
- ww1_BUL_TUR.18.t: "Mustafa Asim Bey Antagonizes Us in Regards to Border Conflicts"
- ww1_BUL_TUR.18.d: "Mustafa Asim Bey has taken an aggressive stance in the discussions on border conflicts, increasing the overall hostilities between Bulgaria and The Ottoman Empire."
+ ww1_BUL_TUR.18.t: "Mustafa Asım Bey Antagonizes Us in Regards to Border Conflicts"
+ ww1_BUL_TUR.18.d: "Mustafa Asım Bey has taken an aggressive stance in the discussions on border conflicts, increasing the overall hostilities between Bulgaria and The Ottoman Empire."
  ww1_BUL_TUR.18.a: "Mobilize the Army"
  ww1_BUL_TUR.18.b: "De-escalate the situation"
 
@@ -323,12 +323,12 @@ l_english:
  ww1_BUL_TUR.20.a: "A relief"
 
  ww1_BUL_TUR.21.t: "Border Conflict"
- ww1_BUL_TUR.21.d: "Mustafa Asim Bey raises the ongoing border conflict with Bulgaria, requesting a response from Geshov regarding this issue."
+ ww1_BUL_TUR.21.d: "Mustafa Asım Bey raises the ongoing border conflict with Bulgaria, requesting a response from Geshov regarding this issue."
  ww1_BUL_TUR.21.a: "Push for an Autonomous Macedonia"
  ww1_BUL_TUR.21.b: "Criticize the Young Turks"
 
- ww1_BUL_TUR.22.t: "Mustafa Asim Bey Agrees to De-escalate"
- ww1_BUL_TUR.22.d: "After much deliberation, Mustafa Asim Bey has agreed to de-escalate the Border tensions along the Bulgarian-Ottoman border."
+ ww1_BUL_TUR.22.t: "Mustafa Asım Bey Agrees to De-escalate"
+ ww1_BUL_TUR.22.d: "After much deliberation, Mustafa Asım Bey has agreed to de-escalate the Border tensions along the Bulgarian-Ottoman border."
  ww1_BUL_TUR.22.a: "That's a wise choice"
  ww1_BUL_TUR.22.b: "Their attitude has made a distasteful situation"
 
@@ -338,12 +338,12 @@ l_english:
  ww1_BUL_TUR.24.b: "Backdown"
 
  ww1_BUL_TUR.25.t: "Bulgaria Backs Down"
- ww1_BUL_TUR.25.d: "Bulgaria has backed down because of further escalation from the Ottoman Empire."
+ ww1_BUL_TUR.25.d: "Bulgaria has backed down because of further escalation from the Ottoman Empire. 
  ww1_BUL_TUR.25.a: "As They Should"
  ww1_BUL_TUR.25.b: "Cease Negotiations"
 
- ww1_BUL_TUR.26.t: "Concerns to Share with Mustafa Asim Bey"
- ww1_BUL_TUR.26.d: "The Bulgarian delegation has compiled a list of issues that need to be addressed in discussions with Mustafa Asim Bey. Mustafa Asim Bey's objective is to reach a mutual understanding of the situation. He asks what should be the topic of discussion?"
+ ww1_BUL_TUR.26.t: "Concerns to Share with Mustafa Asım Bey"
+ ww1_BUL_TUR.26.d: "The Bulgarian delegation has compiled a list of issues that need to be addressed in discussions with Mustafa Asım Bey. Mustafa Asım Bey's objective is to reach a mutual understanding of the situation. He asks what should be the topic of discussion?"
  ww1_BUL_TUR.26.a: "Address the Border Refugee Problem"
  ww1_BUL_TUR.26.b: "Discuss Border Banditry"
  ww1_BUL_TUR.26.c: "Raise Concerns About 'Ottomanization'"
@@ -361,12 +361,12 @@ l_english:
  ww1_BUL_TUR.28.a: "Sounds Good"
  ww1_BUL_TUR.28.b: "We'd Prefer a more 'hands-on approach'"
 
- ww1_BUL_TUR.29.t: "Mustafa Asim Bey Agrees"
- ww1_BUL_TUR.29.d: "Mustafa Asim Bey sees agreement in Geshov's proposals."
+ ww1_BUL_TUR.29.t: "Mustafa Asım Bey Agrees"
+ ww1_BUL_TUR.29.d: "Mustafa Asım Bey sees agreement in Geshov's proposals."
  ww1_BUL_TUR.29.a: "Great"
 
- ww1_BUL_TUR.30.t: "Mustafa Asim Bey would Prefer a more 'Hands-on Approach'"
- ww1_BUL_TUR.30.d: "Mustafa Asim Bey suggests a more fully direct intervention regarding the refugee situation."
+ ww1_BUL_TUR.30.t: "Mustafa Asım Bey would Prefer a more 'Hands-on Approach'"
+ ww1_BUL_TUR.30.d: "Mustafa Asım Bey suggests a more fully direct intervention regarding the refugee situation."
  ww1_BUL_TUR.30.a: "Sure"
  ww1_BUL_TUR.30.b: "No"
 
@@ -375,8 +375,8 @@ l_english:
  ww1_BUL_TUR.31.a: "Well, Move on"
  ww1_BUL_TUR.31.b: "Cease Negotiations"
 
- ww1_BUL_TUR.32.t: "Mustafa Asim Bey would like to move on (after a disagreement) #2"
- ww1_BUL_TUR.32.d: "After some disagreement, Mustafa Asim Bey wishes to continue further discussions on other topics."
+ ww1_BUL_TUR.32.t: "Mustafa Asım Bey would like to move on (after a disagreement) #2"
+ ww1_BUL_TUR.32.d: "After some disagreement, Mustafa Asım Bey wishes to continue further discussions on other topics."
  ww1_BUL_TUR.32.a: "Ok"
 
  ww1_BUL_TUR.33.t: "Concerns Shared by Ivan Geshov: Border Refugee Problem, He Proposes Forceful Habitancy"
@@ -384,16 +384,16 @@ l_english:
  ww1_BUL_TUR.33.a: "Sure"
  ww1_BUL_TUR.33.b: "We'd prefer financial incentives"
 
- ww1_BUL_TUR.34.t: "Mustafa Asim Bey would prefer financial incentives"
- ww1_BUL_TUR.34.d: "Mustafa Asim Bey desires financial solutions for the refugee crisis."
+ ww1_BUL_TUR.34.t: "Mustafa Asım Bey would prefer financial incentives"
+ ww1_BUL_TUR.34.d: "Mustafa Asım Bey desires financial solutions for the refugee crisis."
  ww1_BUL_TUR.34.a: "Sure"
  ww1_BUL_TUR.34.b: "No"
 
  ww1_BUL_TUR.35.t: "Bulgaria Agrees"
- ww1_BUL_TUR.35.d: "The Bulgarian delegation agrees to Mustafa Asim Bey's financial incentives."
+ ww1_BUL_TUR.35.d: "The Bulgarian delegation agrees to Mustafa Asım Bey's financial incentives."
  ww1_BUL_TUR.35.a: "Great"
 
- ww1_BUL_TUR.36.t: "Concerns to Share with Mustafa Asim Bey: Border Banditry"
+ ww1_BUL_TUR.36.t: "Concerns to Share with Mustafa Asım Bey: Border Banditry"
  ww1_BUL_TUR.36.d: "Ivan Geshov has expressed concerns regarding the increase of banditry along the border. He suggests that a greater gendarmerie presence may be necessary to maintain order. Alternatively, he could criticize the Ottoman administration, putting pressure on them to resolve the issue."
  ww1_BUL_TUR.36.a: "Propose an Increased Gendarmerie Presence"
  ww1_BUL_TUR.36.b: "Criticize the Young Turk Administration"
@@ -403,8 +403,8 @@ l_english:
  ww1_BUL_TUR.37.a: "We Agree"
  ww1_BUL_TUR.37.b: "We Disagree"
 
- ww1_BUL_TUR.38.t: "Mustafa Asim Bey Disagrees"
- ww1_BUL_TUR.38.d: "Mustafa Asim Bey disagrees with the suggestion of increasing the gendarmerie presence. He believes that a different method should be explored to address the issue of border banditry."
+ ww1_BUL_TUR.38.t: "Mustafa Asım Bey Disagrees"
+ ww1_BUL_TUR.38.d: "Mustafa Asım Bey disagrees with the suggestion of increasing the gendarmerie presence. He believes that a different method should be explored to address the issue of border banditry."
  ww1_BUL_TUR.38.a: "We'll Move On"
  ww1_BUL_TUR.38.b: "This is Unacceptable"
 
@@ -413,8 +413,8 @@ l_english:
  ww1_BUL_TUR.39.a: "He’s Not Wrong"
  ww1_BUL_TUR.39.b: "Rude - Cease Negotiations"
 
- ww1_BUL_TUR.40.t: "Mustafa Asim Bey Agrees with Our Criticism: Border Banditry"
- ww1_BUL_TUR.40.d: "Mustafa Asim Bey has surprisingly agreed with the Bulgarian criticism of the Ottoman administration’s handling of border banditry. It seems that further discussions will be necessary to deal with this problem further."
+ ww1_BUL_TUR.40.t: "Mustafa Asım Bey Agrees with Our Criticism: Border Banditry"
+ ww1_BUL_TUR.40.d: "Mustafa Asım Bey has surprisingly agreed with the Bulgarian criticism of the Ottoman administration’s handling of border banditry. It seems that further discussions will be necessary to deal with this problem further."
  ww1_BUL_TUR.40.a: "Um... Okay"
 
  ww1_BUL_TUR.41.t: "Geshov Pushes for an Autonomous Macedonia"
@@ -422,8 +422,8 @@ l_english:
  ww1_BUL_TUR.41.a: "We'll keep that in mind."
  ww1_BUL_TUR.41.b: "No, that's not an option."
 
- ww1_BUL_TUR.42.t: "Mustafa Asim Bey Acknowledges the Request"
- ww1_BUL_TUR.42.d: "Mustafa Asim Bey has acknowledged Geshov's proposal for an autonomous Macedonia, but there has been no clear commitment made on the issue."
+ ww1_BUL_TUR.42.t: "Mustafa Asım Bey Acknowledges the Request"
+ ww1_BUL_TUR.42.d: "Mustafa Asım Bey has acknowledged Geshov's proposal for an autonomous Macedonia, but there has been no clear commitment made on the issue."
  ww1_BUL_TUR.42.a: "What does this even mean?"
 
  ww1_BUL_TUR.43.t: "Ottoman Response to Autonomous Macedonia"
@@ -441,8 +441,8 @@ l_english:
  ww1_BUL_TUR.45.a: "He’s not wrong."
  ww1_BUL_TUR.45.b: "Rude! Cease negotiations."
 
- ww1_BUL_TUR.46.t: "Mustafa Asim Bey Agrees with the Criticism"
- ww1_BUL_TUR.46.d: "Mustafa Asim Bey has agreed with some of the criticism levied by the Bulgarian delegation. He acknowledges that the Ottoman handling of the border conflicts has been less than ideal, but future steps regarding this issue remain unclear"
+ ww1_BUL_TUR.46.t: "Mustafa Asım Bey Agrees with the Criticism"
+ ww1_BUL_TUR.46.d: "Mustafa Asım Bey has agreed with some of the criticism levied by the Bulgarian delegation. He acknowledges that the Ottoman handling of the border conflicts has been less than ideal, but future steps regarding this issue remain unclear"
  ww1_BUL_TUR.46.a: "Ok...?"
 
  ww1_BUL_TUR.47.t: "The Ottomans Agree to an Autonomous Macedonia"
@@ -528,7 +528,7 @@ l_english:
  BUL_idea_balkan_hegemony_desc:0 ""
  BUL_idea_the_balkan_prussia:0 "Balkan Prussia"
  BUL_idea_the_balkan_prussia_desc:0 "Bulgaria fierce nationalism and powerful
-military. causes it to gain a reputation as the Prussia of the Balkans with its foundations of unity and belief in the inheritance of a great Balkan empire. The country is therefore driven to build a formidable military force."
+military. causes it to gain a reputation as the Prussia of the Balkans with its foundations of unity and belief in the inheritance of a great Balkan empire. The country is therefore driven to build a formidable military force.""
  BUL_idea_agrarian_economy:0 "Agrarian Economy"
  BUL_idea_agrarian_economy_desc:0 "Bulgaria's economy thrives on its vast, fertile farmlands, with agriculture leading the way. Rural communities work tirelessly to produce essential crops, yet the absence of industrialization and modernization slows growth. Nonetheless, the spirit of the Bulgarian peasantry, rooted in hard work and resilience, keeps hope alive for a future where these agrarian foundations support a flourishing, modernized country."
  BUL_idea_agrarian_mobilisation:0 "Agrarian Mobilisation"
