Revert "Maybe (probably not) fix"
This reverts commit 5c015598e4c1d8902901b131a94d868e84722f81.

--- a/localisation/english/ww1_bulgaria_l_english.yml
+++ b/localisation/english/ww1_bulgaria_l_english.yml
@@ -1,6 +1,5 @@
 l_english:
- 
-#bulgaria_random_shi
+ #bulgaria_random_shi
  liberal_stabilizer:0 "Liberal Stabilizer"
  nationalist_unifier_and_banker:0 "Nationalist Unifier and Banker"
  left_side_range:0 "Low Authority"
@@ -186,7 +185,7 @@ l_english:
  BUL_purchase_russian_rifles:0 "Purchase Russian Rifles"
  BUL_purchase_french_rifles:0 "Purchase French Rifles"
  BUL_sue_for_peace_ROM:0 "Surrendur to Romania"
- BUL_sue_for_peace_TUR:0 "Surrendur to the Ottomans"
+ BUL_sue_for_peace_TUR:0 "Surrendur to the Ottomans'
 
  ###Event Loc##
  #Bulgaria
@@ -450,7 +449,7 @@ l_english:
 
  ww1_BUL_TUR.48.t: "Concerns of the Young Turk's 'Ottomanization'"
  ww1_BUL_TUR.48.d: "The Young Turks' policies of 'Ottomanization' have raised concerns among our leadership. We must address these issues."
- ww1_BUL_TUR.48.a: "Express Our Concerns"
+ ww1_BUL_TUR.48.a: "Express Our Concerns
 
  ww1_BUL_TUR.49.t: "Geshov Expresses Concerns"
  ww1_BUL_TUR.49.d: "Ivan Geshov has expressed his concerns regarding our policies of 'Ottomanization.' We need to decide how to respond."
@@ -527,8 +526,7 @@ l_english:
  BUL_idea_balkan_hegemony:0 "Balkan Hegemony"
  BUL_idea_balkan_hegemony_desc:0 ""
  BUL_idea_the_balkan_prussia:0 "Balkan Prussia"
- BUL_idea_the_balkan_prussia_desc:0 "Bulgaria fierce nationalism and powerful
-military. causes it to gain a reputation as the Prussia of the Balkans with its foundations of unity and belief in the inheritance of a great Balkan empire. The country is therefore driven to build a formidable military force.""
+ BUL_idea_the_balkan_prussia_desc:0 "Bulgaria fierce nationalism and powerful military. causes it to gain a reputation as the Prussia of the Balkans with its foundations of unity and belief in the inheritance of a great Balkan empire. The country is therefore driven to build a formidable military force.
  BUL_idea_agrarian_economy:0 "Agrarian Economy"
  BUL_idea_agrarian_economy_desc:0 "Bulgaria's economy thrives on its vast, fertile farmlands, with agriculture leading the way. Rural communities work tirelessly to produce essential crops, yet the absence of industrialization and modernization slows growth. Nonetheless, the spirit of the Bulgarian peasantry, rooted in hard work and resilience, keeps hope alive for a future where these agrarian foundations support a flourishing, modernized country."
  BUL_idea_agrarian_mobilisation:0 "Agrarian Mobilisation"
