--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5609,15 +5609,15 @@ ROM_import_foreign_tools:0 "Import Foreign Tools"
 ROM_concessions_to_the_upper_class:0 "Concessions to the Upper Class"
 ROM_support_industrialists:0 "Support Industrialists"
 ROM_agricultural_knowledge:0 "New Agricultural Techniques"
-ROM_government_aid_to_industries:0 "Subsidies to Industries"
+ROM_government_aid_to_industries:0 "Aid Construction of New Factories"
 ROM_move_away_from_an_export_based_economy:0 "Move Away From an Export-Based Economy"
 ROM_doubuja_steel_industry:0 "Dobrujan Steel Industry"
 ROM_expand_doubruja_dockyards:0 "Expand Danube Ports"
 ROM_increase_cereal_exports:0 "Increase Cereal Exports"
-ROM_ramp_up_exports_of_fruit_grains_and_seeds:0 "Ramp Up Exports of Grains"
+ROM_ramp_up_exports_of_fruit_grains_and_seeds:0 "Ramp Up Exports of Grains Fruits and Seeds"
 ROM_increase_gold_and_silver_exports:0 "Export Gold and Silver"
 ROM_expansion_of_the_lumber_industry:0 "Expand the Logging Industry"
-ROM_trade_deals_with_germany_and_austria:0 "Trade Deal With the Central Powers"
+ROM_trade_deals_with_germany_and_austria:0 "Trade Deals With Germany and Austria"
 ROM_close_the_trade_defict:0 "Close the Trade Deficit"
 ww1_romania.72.t:0 "Successful Aircraft Design Returned"
 ww1_romania.72.desc:0 "Aurel Vlaicu, Romanian inventor, engineer, airplane designer and pilot, flew for the first time A. Vlaicu Nr. I today near Bucharest. This is a huge development for Romanian planes to be used in the military."
@@ -5634,7 +5634,7 @@ ROM_back_in_couple_of_days.tt:0 "§YThis engineer will be back with his design i
 ROM_different_buffs_aircraft.tt:0 "§WDepending on who you choose, you will get different buffs related to Air Technology.§W§W"
 ROM_commission_air_name1:0 "§YCommissioned Aurel Vlaicu §Y§W"
 ROM_commission_air_name2:0 "§YCommissioned Traian Vuia §Y§W"
-
+ROM_pave_the_way_for_industrial_expansion:0 "Pave the way for Industrial Expansion"
 
 #custom tooltips
 ROM_the_kings_government:0 "The King's Favorites"
@@ -5675,6 +5675,10 @@ ROM_tsarmy:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army O
 ROM_pwarmy:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!\n£organization_texticon Division Organization: §G+5.00%§!"
 ROM_reorg_army.tt:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Organization: §G+10.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!\n\n"
 ROM_prah_f.tt:0 "Modify §YRomanian Economy§! by\n£factory_output_texticon Max Factories in a State: §G+2.50%§!"
+ROM_prah_f2.tt:0 "Modify §YRomanian Economy§! by\n£factory_output_texticon Max Factories in a State: §G+10.00%§!"
+ROM_prah_f3.tt:0 "Modify §YRomanian Economy§! by\n£factory_output_texticon Max Factories in a State: §G+5.00%§!"
+
+ROM_revitalization_of_the_north:0 "Economic Revitalization of the North"
 ROM_cte.tt:0 "Modify §YRomanian Economy§! by\n£construction_speed_texticon Construction Speed: §G+5.00%§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y+10.0%§!"
 ROM_mafa:0 "Modify §YRomanian Economy§! by\n£construction_speed_texticon Construction Speed: §G+5.00%§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y+5.0%§!"
 ROM_mil_speed_1:0 "Modify §YRomanian Economy§! by\n§YMilitary Factory§! construction speed: §G+10.00%§!"
