--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5634,7 +5634,7 @@ ROM_back_in_couple_of_days.tt:0 "§YThis engineer will be back with his design i
 ROM_different_buffs_aircraft.tt:0 "§WDepending on who you choose, you will get different buffs related to Air Technology.§W§W"
 ROM_commission_air_name1:0 "§YCommissioned Aurel Vlaicu §Y§W"
 ROM_commission_air_name2:0 "§YCommissioned Traian Vuia §Y§W"
-ROM_pave_the_way_for_industrial_expansion:0 "Pave the way for Industrial Expansion"
+ROM_pave_the_way_for_industrial_expansion:0 "Pave the Way for Industrial Expansion"
 
 #custom tooltips
 ROM_the_kings_government:0 "The King's Favorites"
